k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cabotage-dev
  labels:
    app.kubernetes.io/name: cabotage
    app.kubernetes.io/env: dev
